sentinel_config/spec/test-fixtures/latest/overrides/mocks_with_no_primary.txtar
-- sentinel.hcl --
-- sentinel_override.hcl --

mock "foo" {
  data = { number1 = 42 }

  module {
    source = "over.sentinel"
  }
}
-- astOut.json --
{
  "_t": "File",
  "_p": {
    "globals": {},
    "imports": {},
    "mocks": {},
    "params": {},
    "policies": {},
    "sentineloptions": null,
    "test": null
  }
}
-- diagOut.txt --
ERROR: There is no mock named "foo". An override file can only override a mock that was already declared in a primary configuration file.:sentinel_override.hcl:1,0->1,10
